--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         "phpoffice/phpspreadsheet": "1.18",
         "psr/simple-cache": "1.0",
         "spatie/laravel-permission": "^5.11",
+        "tecnickcom/tcpdf": "^6.6",
         "yajra/laravel-datatables-oracle": "~9.0"
     },
     "require-dev": {
