--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "maatwebsite/excel": "3.1.48",
         "phpoffice/phpspreadsheet": "1.18",
         "psr/simple-cache": "1.0",
+        "simplesoftwareio/simple-qrcode": "^4.2",
         "spatie/laravel-permission": "^5.11",
         "tecnickcom/tcpdf": "^6.6",
         "yajra/laravel-datatables-oracle": "~9.0"
