--- a/.env.example
+++ b/.env.example
@@ -28,13 +28,16 @@ REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
+
+
+
 MAIL_MAILER=smtp
-MAIL_HOST=mailpit
-MAIL_PORT=1025
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS="hello@example.com"
+MAIL_HOST=smtp.gmail.com
+MAIL_PORT=587
+MAIL_USERNAME=dev4@scube.net.in
+MAIL_PASSWORD=cfagoadvhqphbquu
+MAIL_ENCRYPTION=tls
+MAIL_FROM_ADDRESS=dev4@scube.net.in
 MAIL_FROM_NAME="${APP_NAME}"
 
 AWS_ACCESS_KEY_ID=
